--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,6 +17,11 @@
       <% end %>
       <%= yield %>
       <%= debug(params) if Rails.env.development? %>
+      <% if is_logged_in? %>
+        <%= link_to "Logout", logout_path, method: :delete%>
+      <% else %>
+        <%= link_to "Login", login_path %>
+      <% end %>
     </div>
   </body>
 </html>
