--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -48,5 +48,7 @@
     </a>
     <!-- Logout Modal-->
     <%= render "admin/shared/logout_modal.html.erb" %>
+    <!-- Other Modal-->
+    <%= render "admin/shared/modal.html.erb" %>
   </body>
 </html>
