--- a/app/views/admin/users/_destroy_user_modal.html.erb
+++ b/app/views/admin/users/_destroy_user_modal.html.erb
@@ -1,17 +1,16 @@
-<div class="modal fade" id="logoutModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
-    aria-hidden="true">
+<div class="modal fade" id="destroyUserModal" tabindex="-1" role="dialog" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered" role="document">
       <div class="modal-content">
           <div class="modal-header">
-            <h5 class="modal-title" id="exampleModalLabel">Ready to Leave?</h5>
+            <h5 class="modal-title">Confirmation</h5>
             <button class="close" type="button" data-dismiss="modal" aria-label="Close">
             <span aria-hidden="true">×</span>
             </button>
           </div>
-          <div class="modal-body">Select "Logout" below if you are ready to end your current session.</div>
+          <div class="modal-body">Are you sure you want to delete this user permanently? This action cannot be undone.</div>
           <div class="modal-footer">
             <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
-            <%= link_to "Logout", logout_path, class: "btn btn-primary", method: :delete %>
+            <%= link_to "Delete", admin_user_path(@user), class: "btn btn-primary", method: :delete %>
           </div>
       </div>
     </div>
