--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -46,9 +46,7 @@
     <a class="scroll-to-top rounded" href="#page-top">
     <i class="fas fa-angle-up"></i>
     </a>
-    <!-- Logout Modal-->
-    <%= render "admin/shared/logout_modal.html.erb" %>
-    <!-- Other Modal-->
+    <!-- Modal-->
     <%= render "admin/shared/modal.html.erb" %>
   </body>
 </html>
