--- a/app/views/admin/shared/_modal.html.erb
+++ b/app/views/admin/shared/_modal.html.erb
@@ -1,6 +1,6 @@
 <div class="modal fade" id="modal" tabindex="-1" role="dialog" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered" role="document">
-      <div class="modal-content">
+      <div class="modal-content" id="modalContent">
           <div class="modal-header">
             <h5 class="modal-title" id="modalTitle"></h5>
             <button class="close" type="button" data-dismiss="modal" aria-label="Close">
@@ -8,9 +8,7 @@
             </button>
           </div>
           <div class="modal-body" id="modalBody"></div>
-          <div class="modal-footer" id="modalFooter">
-            <button class="btn btn-secondary" type="button" data-dismiss="modal">Close</button>
-          </div>
+          <div class="modal-footer" id="modalFooter"></div>
       </div>
     </div>
 </div>
