--- a/app/views/admin/users/edit.html.erb
+++ b/app/views/admin/users/edit.html.erb
@@ -10,7 +10,7 @@
       </div>
     </div>
   <%= form_for @user, url: admin_user_path(@user) do |f| %>
-  <%= render 'layouts/shared/error_messages' %>
+  <%= render 'layouts/shared/error_messages', object: @user %>
     <div class="col">
       <div class="row">
         <div class="col mb-3">
