--- a/app/views/admin/users/new.html.erb
+++ b/app/views/admin/users/new.html.erb
@@ -1,16 +1,17 @@
 <h1>Sign up</h1>
 <div class="row">
-   <div class="col-md-6 col-md-offset-3">
-      <%= form_for(@user) do |f| %>
-        <%= f.label :username %>
-        <%= f.text_field :username %>
-        <%= f.label :email %>
-        <%= f.email_field :email %>
-        <%= f.label :password %>
-        <%= f.password_field :password %>
-        <%= f.label :password_confirmation, "Confirmation" %>
-        <%= f.password_field :password_confirmation %>
-        <%= f.submit "Create my account", class: "btn btn-primary" %>
-      <% end %>
-   </div>
+  <div class="col-md-6 col-md-offset-3">
+    <%= form_for(@user) do |f| %>
+    <%= render 'layouts/shared/error_messages', object: @user %>
+    <%= f.label :username %>
+    <%= f.text_field :username %>
+    <%= f.label :email %>
+    <%= f.email_field :email %>
+    <%= f.label :password %>
+    <%= f.password_field :password %>
+    <%= f.label :password_confirmation, "Confirmation" %>
+    <%= f.password_field :password_confirmation %>
+    <%= f.submit "Create my account", class: "btn btn-primary" %>
+    <% end %>
+  </div>
 </div>
