Added league and season

--- a/app/views/admin/dashboards/dashboard.html.erb
+++ b/app/views/admin/dashboards/dashboard.html.erb
@@ -52,7 +52,7 @@
                     <div class="text-xs font-weight-bold text-success text-uppercase mb-1">
                       Articles
                     </div>
-                    <div class="h5 mb-0 font-weight-bold text-gray-800">0</div>
+                    <div class="h5 mb-0 font-weight-bold text-gray-800"><%= Article.count %></div>
                 </div>
                 <div class="col-auto">
                     <i class="fas fa-comment fa-2x text-gray-300"></i>
