Removed venue, founder and added region column to leagues table

--- a/app/views/admin/leagues/_league.html.erb
+++ b/app/views/admin/leagues/_league.html.erb
@@ -4,10 +4,7 @@
     <span class="font-medium text-muted mb-0"><%= league.name %></span>
   </td>
   <td>
-      <span class="text-muted"><%= league.venue %></span><br>
-  </td>
-  <td>
-      <span class="text-muted"><%= league.founder %></span><br>
+      <span class="text-muted"><%= league.region %></span><br>
   </td>
   <td>
       <span class="text-muted"><%= league.founded_at %></span><br>
