--- a/app/views/admin/leagues/index.html.erb
+++ b/app/views/admin/leagues/index.html.erb
@@ -15,8 +15,7 @@
                       <tr>
                         <th scope="col" class="border-0 text-uppercase font-medium pl-4">#</th>
                         <th scope="col" class="border-0 text-uppercase font-medium">Name</th>
-                        <th scope="col" class="border-0 text-uppercase font-medium">Venue</th>
-                        <th scope="col" class="border-0 text-uppercase font-medium">Founder</th>
+                        <th scope="col" class="border-0 text-uppercase font-medium">Region</th>
                         <th scope="col" class="border-0 text-uppercase font-medium">Founded At</th>
                         <th scope="col" class="border-0 text-uppercase font-medium">Created At</th>
                         <th scope="col" class="border-0 text-uppercase font-medium">Manage</th>
