--- a/app/views/admin/leagues/new.html.erb
+++ b/app/views/admin/leagues/new.html.erb
@@ -13,8 +13,8 @@
       <%= f.text_field :website_url, class: 'form-control' %>
     </div>
     <div class="form-group">
-      <%= f.label :venue %>
-      <%= f.text_field :venue, class: 'form-control' %>
+      <%= f.label :region %>
+      <%= f.text_field :region, class: 'form-control' %>
     </div>
     <div class="form-group">
       <%= f.label :founder %>
