Added club for admin

--- a/app/views/admin/shared/_sidebar.html.erb
+++ b/app/views/admin/shared/_sidebar.html.erb
@@ -40,6 +40,12 @@
     <span>Leagues</span>
     </a>
   </li>
+    <li class="nav-item">
+    <a class="nav-link" href="<%= admin_clubs_path %>">
+    <i class="fas fa-fw fa-users"></i>
+    <span>Clubs</span>
+    </a>
+  </li>
   <!-- Divider -->
   <hr class="sidebar-divider">
   <!-- Heading -->
