--- a/app/views/admin/clubs/new.html.erb
+++ b/app/views/admin/clubs/new.html.erb
@@ -1,24 +1,24 @@
 <div class="container-fluid">
   <div class="d-sm-flex align-items-center justify-content-between mb-4">
-    <h1 class="h3 mb-0 text-gray-800">New League</h1>
+    <h1 class="h3 mb-0 text-gray-800">New Club</h1>
   </div>
-  <%= form_for([:admin, @league]) do |f| %>
-    <%= render 'layouts/shared/error_messages', object: @league %>
+  <%= form_for([:admin, @club]) do |f| %>
+    <%= render 'layouts/shared/error_messages', object: @club %>
     <div class="form-group">
       <%= f.label :name %>
       <%= f.text_field :name, class: 'form-control' %>
     </div>
     <div class="form-group">
-      <%= f.label :website %>
-      <%= f.text_field :website_url, class: 'form-control' %>
-    </div>
-    <div class="form-group">
-      <%= f.label :region %>
-      <%= f.text_field :region, class: 'form-control' %>
+      <%= f.label :stadium %>
+      <%= f.text_field :stadium, class: 'form-control' %>
     </div>
     <div class="form-group">
       <%= f.label :manager %>
-      <%= f.text_field :manager, class: 'form-control' %>
+      <%= f.text_field :manager, class: 'form-control'%>
+    </div>
+    <div class="form-group">
+      <%= f.label :history %>
+      <%= f.text_area :history, class: 'form-control', rows: 2  %>
     </div>
     <div class="form-group">
       <%= f.label :founded_at %>
@@ -29,7 +29,7 @@
       <%= f.file_field :logo, accept: "image/jpeg,image/gif,image/png" %>
     </div>
     <div class="col d-flex justify-content-end">
-      <%= link_to "Cancel", admin_leagues_path, class: "btn btn-secondary mr-2" %>
+      <%= link_to "Cancel", admin_clubs_path, class: "btn btn-secondary mr-2" %>
       <%= f.submit "Create", class: "btn btn-primary" %>
     </div>
   <% end %>
