--- a/app/views/admin/shared/_sidebar.html.erb
+++ b/app/views/admin/shared/_sidebar.html.erb
@@ -46,6 +46,13 @@
     <span>Clubs</span>
     </a>
   </li>
+  </li>
+    <li class="nav-item">
+    <a class="nav-link" href="<%= admin_players_path %>">
+    <i class="fas fa-fw fa-user"></i>
+    <span>Players</span>
+    </a>
+  </li>
   <!-- Divider -->
   <hr class="sidebar-divider">
   <!-- Heading -->
