--- a/app/javascript/stylesheets/admin.css
+++ b/app/javascript/stylesheets/admin.css
@@ -1,3 +1,4 @@
 @import "bootstrap";
 @import "./admin/show_article.css";
 @import "./admin/sb-admin-2.css";
+@import "jquery-datetimepicker/jquery.datetimepicker";
