--- a/app/views/admin/leagues/new.html.erb
+++ b/app/views/admin/leagues/new.html.erb
@@ -1,47 +1,32 @@
 <div class="container-fluid">
   <div class="d-sm-flex align-items-center justify-content-between mb-4">
-    <h1 class="h3 mb-0 text-gray-800">Edit Match</h1>
+    <h1 class="h3 mb-0 text-gray-800">New League</h1>
   </div>
-  <%= form_for([:admin, @match]) do |f| %>
-    <%= render 'layouts/shared/error_messages', object: @match %>
-    <div class = "row">
-      <div class = "col">
-        <div class="form-group">
-          <%= f.label :league %>
-          <%= select_tag "league", options_from_collection_for_select(@leagues, "id", "name"), { class: "custom-select" } %>
-        </div>
-      </div>
-      <div class = "col">
-        <div class="form-group">
-          <%= f.label :season %>
-          <%= %>
-          <%= f.select :season_id, options_for_select(Season.all.map{|s| ["#{s.start_at} - #{s.end_at}", s.id]}), {}, { class: "custom-select" }  %>
-        </div>
-      </div>
+  <%= form_for([:admin, @league]) do |f| %>
+    <%= render 'layouts/shared/error_messages', object: @league %>
+    <div class="form-group">
+      <%= f.label :name %>
+      <%= f.text_field :name, class: 'form-control' %>
     </div>
     <div class="form-group">
-      <%= f.label :end_at %>
-      <%= f.text_field :end_at, class: 'form-control datetimepicker' %> 
+      <%= f.label :website %>
+      <%= f.text_field :website_url, class: 'form-control' %>
     </div>
     <div class="form-group">
-      <%= f.label :stage_in_league %>
-      <%= f.text_field :stage_in_league, class: 'form-control' %>
+      <%= f.label :region %>
+      <%= f.text_field :region, class: 'form-control' %>
     </div>
     <div class="form-group">
-      <%= f.label :judge_name %>
-      <%= f.text_field :judge_name, class: 'form-control' %>
+      <%= f.label :founded_at %>
+      <%= f.date_field :founded_at, as: :date, class: 'form-control' %> 
     </div>
     <div class="form-group">
-      <%= f.label :first_team %>
-      <%= f.collection_select :first_team_id, Club.order(:name), :id, :name, { include_blank: true }, { class: "custom-select" } %>
-    </div>
-    <div class="form-group">
-      <%= f.label :second_team %>
-      <%= f.collection_select :second_team_id, Club.order(:name), :id, :name, { include_blank: true }, { class: "custom-select" } %>
+      <%= f.label :logo %>
+      <%= f.file_field :logo, accept: "image/jpeg,image/gif,image/png" %>
     </div>
     <div class="col d-flex justify-content-end">
-      <%= link_to "Cancel", admin_matches_path, class: "btn btn-secondary mr-2" %>
-      <%= f.submit "Save changes", class: "btn btn-primary" %>
+      <%= link_to "Cancel", admin_leagues_path, class: "btn btn-secondary mr-2" %>
+      <%= f.submit "Create", class: "btn btn-primary" %>
     </div>
   <% end %>
 </div>
